# galileo-demo

./: Cargo.toml  LICENSE  README.md  notes.md  preflight.sh  shell.nix
.github/workflows/: rust.yml
src/: app.rs  main.rs
